refector: adjust folder structure
