# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateUrl"
+                            "$ref": "#/definitions/repository.CreateUrl"
                         }
                     }
                 ],
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiUrl"
+                            "$ref": "#/definitions/repository.ApiUrl"
                         }
                     }
                 }
@@ -40,7 +40,7 @@
         }
     },
     "definitions": {
-        "model.ApiUrl": {
+        "repository.ApiUrl": {
             "type": "object",
             "properties": {
                 "description": {
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "model.CreateUrl": {
+        "repository.CreateUrl": {
             "type": "object",
             "properties": {
                 "org_url": {
